<resources>
    <string name="app_name" translatable="false">ClotheX User</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_categories">Categories</string>
    <string name="title_wish_list">Wishlist</string>
    <string name="title_profile">Profile</string>
    <string name="welcome_to">Welcome To</string>
    <string name="discover_your_style">Discover your style</string>
    <string name="next">Next</string>
    <string name="lets_start">Let\'s start</string>
    <string name="lorem_ipsum" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="find_what_you_prefer">Find what you prefer?</string>
    <string name="skip">Skip</string>
    <string name="what_do_you_prefer">What do you prefer?</string>
    <string name="women">Women</string>
    <string name="kids">Kids</string>
    <string name="men">Men</string>
    <string name="what_outfit_do_you_want_for">What outfit do you want for?</string>
    <string name="what_type_of_outfit_do_you_prefer">What type of outfit do you prefer?</string>
    <string name="what_size_do_you_prefer">What size do you prefer?</string>
    <string name="choose_user_pref_disclaimer">Note : there are many many categories and sizes inside the app you can discover it as well.</string>
    <string name="get_started">Get started</string>
    <string name="hot_deal">Hot deal</string>
    <string name="new_arrivals">New arrivals</string>
    <string name="see_all">See all</string>
    <string name="discover_shops">Discover shops</string>
    <string name="select_location_title">Showing shops around</string>
    <string name="select_location_to_search">Select location to search</string>
    <string name="select_current_location_title">Show shops around current location</string>
    <string name="choose_location_on_map_title">Show shops in specific location</string>
    <string name="choose_location_on_map_value">Choose location on the map</string>
    <string name="choose_color">Choose color</string>
    <string name="choose_size">Choose size</string>
    <string name="available_in">Available in</string>
    <string name="add_to_my_items">Add to my items</string>
    <string name="added_to_my_items">Added to My Items</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="my_items">My items</string>
    <string name="phone_no">Phone number</string>
    <string name="password">Password</string>
    <string name="forget_password_question">Forget password?</string>
    <string name="forget_password">Forget password</string>
    <string name="sign_up_msg">I don\'t have account. Sign up!</string>
    <string name="sign_up_first_title">You don\'t have account</string>
    <string name="sign_up_first_description">sign up first to continue</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_msg">Already have an account. Sign in!</string>
    <string name="view_orders_by">View Orders by</string>
    <string name="filter">Filter</string>
    <string name="placed_on">Placed on %s</string>
    <string name="order">Order : %s</string>
    <string name="order_valid_msg">Your order is valid for %s hours Hurry up!</string>
    <string name="order_run_out_of_time">Your order may become invalid!</string>
    <string name="get_directions_now">Get directions now</string>
    <string name="book_items">Book items</string>
    <string name="total">Total</string>
    <string name="discount">Discount</string>
    <string name="subtotal">Subtotal</string>
    <string name="book_now">Book now</string>
    <string name="done">Done</string>
    <string name="track_your_order">Track your order</string>
    <string name="your_request_submitted_successfully">Your request submitted successfully!</string>
    <string name="request_success_sub_msg">Your request has been sent to the merchant once it approved we will send you a notification.</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="best_match">Best match</string>
    <string name="choose_category">Choose category</string>
    <string name="price_range">Price range</string>
    <string name="do_search">Search</string>
    <string name="my_preferences">My preferences</string>
    <string name="edit_my_pref_sub_title">Here is what you prefer</string>
    <string name="edit_location_sub_title">You can edit saved places</string>
    <string name="edit_profile_title">Edit profile</string>
    <string name="edit_profile_sub_title">Here is all of your info</string>
    <string name="language_title">Language</string>
    <string name="language_sub_title">Change app language</string>
    <string name="logout_title">Logout</string>
    <string name="save">Save</string>
    <string name="manage_saved_location">Manage saved location</string>
    <string name="add_new_location">Add New Location</string>
    <string name="change_password">Change password</string>
    <string name="arabic" translatable="false">العربية</string>
    <string name="english" translatable="false">English</string>
    <string name="select_language">Select language</string>
    <string name="vouchers">Vouchers</string>
    <string name="add_voucher">Add voucher</string>
    <string name="add_new_voucher">Add new voucher</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="add_voucher_as_text">Add Voucher as text</string>
    <string name="code">Code</string>
    <string name="voucher_added_successfully">Voucher added successfully!</string>
    <string name="enable_camera">Enable Camera</string>
    <string name="enable_camera_msg">You need to enable camera access to scan the QR code to get your offer!</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="discover_more">Discover more</string>
    <string name="for_title">For</string>
    <string name="shop_details">Shop details</string>
    <string name="items">Items</string>
    <string name="photos">Photos</string>
    <string name="info">Info</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="working_hours">Working hours</string>
    <string name="contacts">Contacts</string>
    <string name="contacts_for_shop">Contacts for %s</string>
    <string name="edit_voucher_subtitle">You can add and see all vouchers</string>
    <string name="edit_vouchers_title">Vouchers</string>
    <string name="cancel">Cancel</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="reset_your_password_desc">Your password must be between 8 and 20 characters long.</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="forget_your_password_desc">Enter the registered email to sent reset your password</string>
    <string name="available_online">Available online</string>
    <string name="voucher">Voucher</string>
    <string name="use_voucher">Use voucher</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="about_us">About us</string>
    <string name="default_notification_channel_id" translatable="false">clothex_channel_id</string>
    <string name="scan_qr_code_subtitle">Ask the merchant to scan this QR code to redeem it!</string>
    <string name="login_first">Please login first to continue!</string>
    <string name="no_my_items_message">No items found!</string>
    <string name="no_my_items_description">Go choose your desired products and add them to My Items</string>
    <string name="no_orders_message">No orders found!</string>
    <string name="no_orders_description">Here you can find the booked requests you made</string>
    <string name="error_title">Oops!</string>
    <string name="swipe_error_message">Error happened!, swipe to try again!</string>
    <string name="redeemed">Redeemed</string>
    <string name="order_details">Order details</string>
    <string name="total_booked_items">Total booked items</string>
    <string name="all">All</string>
    <string name="no_items_found_msg">No items found</string>
    <string name="total_price">Total price</string>
    <string name="orders">Orders</string>
    <string name="number_1" translatable="false">1</string>
    <string name="fill_voucher_code_message">Please fill in the code first!</string>
    <string name="error">Error!</string>
    <string name="error_happened_message_title">Can\'t complete your request, please try again!</string>
    <string name="network_error_message">Can\'t connect to our servers, please try again.</string>
    <string name="egp">EGP %s</string>
    <string name="cant_open_app_message">%s App not found!</string>
    <string name="reset_password_mail_sent">We have sent a mail to reset your password on</string>
    <string name="no_result_for_places">Can\'t find the place, please retry with another key!</string>
    <string name="error_saving_location_title">Error saving location!</string>
    <string name="location_count_restriction_message">You can\'t add more than 4 locations, delete one of them before adding a new one.</string>
    <string name="edit_locations">Edit locations</string>
    <string name="plus_items">+%s items</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="delete_my_item_group_message">Do you want to delete this group of items? if you delete it you will lose your items in it.</string>
    <string name="delete">Delete</string>
    <string name="error_happened_try_again">Error happened, please try again!</string>
    <string name="deleted_successfully">Deleted successfully!</string>
    <string name="select_color_first">You should select a color to proceed!</string>
    <string name="select_size_first">You should select a size to proceed!</string>
    <string name="select_branch_first">You should select branch to proceed!</string>
    <string name="saved_amount_format">You save</string>
    <string name="invalid_email">Email not matching!</string>
    <string name="invalid_phone_number">Phone number is not valid</string>
    <string name="invalide_password">must contains 8 characters, at least one letter and one number</string>
    <string name="invalid_username">Username is not valid!</string>
    <string name="signed_up_successfully">You signed up successfully, now please log in!</string>
    <string name="password_resetted_succssfully_message">Your password was reset successfully!</string>
    <string name="shops">Shops</string>
    <string name="more_branches">more branches</string>
    <string name="nearest_branch">Nearest branch</string>
    <string name="asc_price">From lowest to highest price</string>
    <string name="desc_price">From highest to lowest price</string>
    <string name="expired_in">Expired in %s</string>
    <string name="your_web_client_id" translatable="false">444086010307-9b0d8npjh5ce0rt0k9ig8vosuvt0qp09.apps.googleusercontent.com</string>
    <string name="facebook_app_id" translatable="false">1389728718153128</string>
    <string name="fb_login_protocol_scheme" translatable="false">clothex</string>
    <string name="facebook_client_token" translatable="false">749c2ff5099984cd0cc9b44d2c25e34c</string>
    <string name="login_using_google">Continue with Google</string>
    <string name="login_using_facebook">Continue with Facebook</string>
    <string name="signup_using_google">Sign up with Google</string>
    <string name="signup_using_facebook">Sign up with Facebook</string>
    <string name="offers">Offers</string>
    <string name="offer">Offer</string>
    <string name="select_branch">Select branch</string>
</resources>