<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/messageTitleTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:gravity="center"
        android:text="@string/your_request_submitted_successfully"
        android:textAppearance="@style/FontSemiBold"
        android:textColor="@color/cod_gray"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subMessageTitleTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="36dp"
        android:gravity="center"
        android:text="@string/request_success_sub_msg"
        android:textAppearance="@style/FontRegular"
        android:textColor="@color/cod_gray"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/messageTitleTV" />

    <TextView
        android:id="@+id/trackOrderButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/direction_bg_shape"
        android:gravity="center"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/track_your_order"
        android:textAppearance="@style/FontSemiBold"
        android:textColor="@color/island_aqua"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/doneButton"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/doneButton"
        style="@style/DefaultButtonTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:paddingStart="32dp"
        android:paddingTop="15dp"
        android:paddingEnd="32dp"
        android:paddingBottom="15dp"
        android:text="@string/done"
        android:textAppearance="@style/FontSemiBold"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>