<?xml version="1.0" encoding="utf-8"?>
<com.clothex.user.customview.BottomSheetContainer xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/select_location_title"
        android:textAppearance="@style/FontSemiBold"
        android:textColor="@color/cod_gray"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            android:src="@drawable/ic_current_location" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_current_location_title"
                android:textAppearance="@style/FontMedium"
                android:textColor="@color/cod_gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/currentLocationTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/FontRegular"
                android:textColor="@color/dove_gray"
                android:textSize="12sp"
                tools:text="Tagammoa 5 - Banks Center" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            android:src="@drawable/ic_choose_location" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_location_on_map_title"
                android:textAppearance="@style/FontMedium"
                android:textColor="@color/cod_gray"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_location_on_map_value"
                android:textAppearance="@style/FontRegular"
                android:textColor="@color/dove_gray"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>


</com.clothex.user.customview.BottomSheetContainer>